p2/confs/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: deploy-app1
    type: deploy-app1
spec:
  template:
    metadata:
      name: app1-pod
      labels:
        app: portfolio
        type: pod-app1
    spec:
      containers:
        - name: portfolio1-pod
          image: fechcha69/fechcha-portfolio-app1
          ports:
          - containerPort: 5000
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: portfolio
      type: pod-app1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: deploy-app2
    type: deploy-app2
spec:
  template:
    metadata:
      name: app2-pod
      labels:
        app: portfolio
        type: pod-app2
    spec:
      containers:
        - name: portfolio2-pod
          image: fechcha69/fechcha-portfolio-app2
          ports:
          - containerPort: 5000
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: portfolio
      type: pod-app2


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: deploy-app3
    type: deploy-app3
spec:
  template:
    metadata:
      name: app3-pod
      labels:
        app: portfolio
        type: pod-app3
    spec:
      containers:
        - name: portfolio3-pod
          image: fechcha69/fechcha-portfolio-app3
          ports:
          - containerPort: 5000
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: portfolio
      type: pod-app3
