p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service

spec:
  type: NodePort
  ports:
  - targetPort: 3000
    port: 3000
    nodePort: 30001
  selector:
    name: app1-pod
    type: app1-pod
  
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service

spec:
  type: NodePort
  ports:
  - targetPort: 3000
    port: 3000
    nodePort: 30002
  selector:
    name: app2-pod
    type: app2-pod

---
apiVersion: v1
kind: Service
metadata:
  name: app3-service

spec:
  type: NodePort
  ports:
  - targetPort: 3000
    port: 3000
    nodePort: 30003
  selector:
    name: app3-pod
    type: app3-pod
